--- a/Login/Templates/inicio.html
+++ b/Login/Templates/inicio.html
@@ -1,39 +1,56 @@
 {% extends 'base.html' %}
 
 {% block subtitle %}
-    Mini sistema de ventas.
+Mini sistema de ventas.
 {% endblock %}
 
 {% block content %}
 
-<div class="row">
-    <div class="col col-md-6">
-        <div class="card">
-            <div class="card-header">
-              Featured
-            </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">Ultimas ventas</li>
-              <li class="list-group-item">No has tenido ninguna venta</li>
+<div class="container">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card mb-4">
+                <div class="card-header">
+                    Últimas ventas (10)
+                </div>
+                <div class="card-body">
+                    <ul class="list-group">
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            <span class="text-start">Venta 1 </span>
+                            <div class="py-1"><span class="badge bg-primary" style="margin-right: 4px;">$100</span><a
+                                    href="#" class="btn btn-outline-primary text-end">Ver</a></div>
 
-            </ul>
-          </div>
-    </div>
-    <div class="col col-md-6">
-        <div class="card text-center">
-            <div class="card-header">
-              Featured
+                        </li>
+
+                        <!-- Agrega más elementos de la lista si es necesario -->
+                    </ul>
+                </div>
             </div>
-            <div class="card-body">
-              <h5 class="card-title">Lista de compras (Proveedores)</h5>
-              <p class="card-text">No hay ninguna orden de compra</p>
-              <a href="#" class="btn btn-primary">Revisar</a>
+            <div class="card mb-4">
+                <div class="card-header">
+                    Últimas compras
+                </div>
+                <div class="card-body">
+                    Muy pronto..
+                </div>
             </div>
-            <div class="card-footer text-body-secondary">
-              2 days ago
+        </div>
+        <div class="col-md-8">
+            <div class="card mb-4">
+                <div class="card-header">
+                    Estadísticas
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Si continúo con este mismo proyecto de tienda...</h5>
+                    <p class="card-text">Agregaré estadísticas de venta semanal, análisis de productos más vendidos y
+                        otras
+                        métricas clave para optimizar el rendimiento del negocio.</p>
+                    <p>Atte: Michel</p>
+                </div>
             </div>
-          </div>
+        </div>
     </div>
 </div>
-    
+
+
 {% endblock %}
