--- a/Login/Templates/login.html
+++ b/Login/Templates/login.html
@@ -178,6 +178,12 @@
 					<label for="clave">Contraseña</label>
 				</div>
 
+				{% if error_message %}
+				<div class="alert alert-danger" role="alert">
+					{{ error_message }}
+				</div>
+				{% endif %}
+
 				<button class="btn btn-primary d-inline" type="submit">Iniciar sesión</button>
 			</form>
 		</div>
